--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -931,4 +931,10 @@
          Devices with screens that deviate too far from their assigned density
          bucket should consider tuning this value in a device-specific overlay. -->
     <dimen name="config_minScalingSpan">25mm</dimen>
+
+    <!-- Safe headphone volume index. When music stream volume is below this index
+    the SPL on headphone output is compliant to EN 60950 requirements for portable music
+    players. -->
+    <integer name="config_safe_media_volume_index">10</integer>
+
 </resources>
