Adding IME tile.
- Adding checks for telephony before showing RSSI tile

Change-Id: I1dc4fb7a07d9693d8c6a96678ac9d4ff9abafe44

--- a/packages/SystemUI/res/layout/quick_settings_tile_ime.xml
+++ b/packages/SystemUI/res/layout/quick_settings_tile_ime.xml
@@ -15,9 +15,12 @@
 -->
 <TextView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/ime_textview"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_gravity="center"
     android:gravity="center"
+    android:drawableTop="@drawable/stat_sys_roaming_cdma_0"
     android:text="@string/quick_settings_ime_label"
-    android:singleLine="true"
+    android:textAppearance="@style/TextAppearance.QuickSettings.TileView"
     />
