Second pass on Keyguard multi-user switcher
-> animating active user to inactive, fading out lock
   selector, freezing screen, then switching users
-> for now, just using a fade, but this will likely
   see iteration

Change-Id: I3acc0b53f2cbf132741e3e0529e2e53fa2824542

--- a/core/res/res/layout/keyguard_multi_user_avatar.xml
+++ b/core/res/res/layout/keyguard_multi_user_avatar.xml
@@ -23,9 +23,11 @@
     android:layout_width="125dp"
     android:layout_height="125dp"
     android:background="#550000ff"
-    android:gravity="center_horizontal">
+    android:gravity="center_horizontal"
+    android:foreground="@drawable/kg_avatar_overlay">
     <ImageView
         android:id="@+id/keyguard_user_avatar"
+        android:scaleType="centerCrop"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center"/>
