--- a/core/res/res/layout/keyguard_multi_user_selector.xml
+++ b/core/res/res/layout/keyguard_multi_user_selector.xml
@@ -19,23 +19,15 @@
 <com.android.internal.policy.impl.keyguard.KeyguardMultiUserSelectorView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
-    android:layout_width="375dp"
-    android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:layout_gravity="center">
 
-    <include
-        android:id="@+id/keyguard_active_user"
-        android:layout_width="250dp"
-        android:layout_height="250dp"
-        layout="@layout/keyguard_multi_user_avatar"/>
+    <com.android.internal.policy.impl.keyguard.KeyguardSubdivisionLayout
+        android:id="@+id/keyguard_users_grid"
+        android:orientation="horizontal"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:layout_gravity="center" />
 
-    <ScrollView
-        android:layout_width="125dp"
-        android:layout_height="250dp">
-        <LinearLayout
-            android:id="@+id/keyguard_inactive_users"
-            android:orientation="vertical"
-            layout_width="match_parent"
-            layout_height="wrap_content"/>
-    </ScrollView>
 </com.android.internal.policy.impl.keyguard.KeyguardMultiUserSelectorView>
