Minor fixes/clarifications for previous patch.
Change-Id: Ib44f6de570064b3f3ddf70b6727b479a09ae5d7a

--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -927,8 +927,14 @@
     <integer name="config_multiuserMaximumUsers">1</integer>
 
     <!-- Minimum span needed to begin a touch scaling gesture.
+         If the span is equal to or greater than this size, a scaling gesture
+         will begin, where supported. (See android.view.ScaleGestureDetector)
+
          This also takes into account the size of any active touch points.
          Devices with screens that deviate too far from their assigned density
-         bucket should consider tuning this value in a device-specific overlay. -->
+         bucket should consider tuning this value in a device-specific overlay.
+         For best results, care should be taken such that this value remains
+         larger than the minimum reported touchMajor/touchMinor values
+         reported by the hardware. -->
     <dimen name="config_minScalingSpan">25mm</dimen>
 </resources>
