Expose resources needed by Chromium-WebView.
This is the first set of framework resources that we've encountered
during the Chromium-WebView bring up that need to be exposed, so add
them to symbols.xml. There will likely be more to come as we continue
bring up work.

Bug: 7178701
Change-Id: I12571e5385bfc13213d2e3c7dfabfdc904c8fe84

--- a/core/res/res/values/symbols.xml
+++ b/core/res/res/values/symbols.xml
@@ -1718,4 +1718,8 @@
   <!-- From PinyinIME(!!!) -->
   <java-symbol type="string" name="inputMethod" />
 
+  <!-- From Chromium-WebView -->
+  <java-symbol type="attr" name="actionModeWebSearchDrawable" />
+  <java-symbol type="string" name="websearch" />
+
 </resources>
